modified update.cs & edit.cs

--- a/Razor Pages with Entity Framework Core/appsettings.json
+++ b/Razor Pages with Entity Framework Core/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Razor_Pages_with_Entity_Framework_CoreContext": "Server=(localdb)\\mssqllocaldb;Database=Razor_SchoolContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
